--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.80"
 bytemuck = "1.14.3"
+encase = "0.7.0"
 pollster = { version = "0.3.0", features = ["macro"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
